comp-transform/testsuite/unclear/EvalImport/EvalImportCompile.golden

comp-transform/testsuite/unclear/EvalImport/EvalImportTransform.hs:10:1: error:
    Could not find module Common
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
10 | import Common
   | ^^^^^^^^^^^^^
